[tool.poetry]
name = "localai"
version = "0.1.0"
description = ""
authors = ["chvckn0rri5 <chvckn0rri5@frenversity.online>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.3.24"
langchain-community = "^0.3.23"
langgraph = "^0.4.1"
tiktoken = "^0.9.0"
langchain-ollama = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
